--- a/README.Rmd
+++ b/README.Rmd
@@ -31,3 +31,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # The pipeline in a nutshell
 
 <a href="https://github.com/philipp-baumann/spectro-platform-graphs/blob/master/simplerspec-read-proc-tibble.png"><img src="https://github.com/philipp-baumann/spectro-platform-graphs/blob/master/simplerspec-read-proc-tibble.png" width="800"/></a>
+
+You can reproduce the above minimal example of the simplerspec processing workflow
+from the script [`10_read-process-spc.R`](https://github.com/philipp-baumann/spectro-platform-graphs) 
+and the data contained [in this repository](https://github.com/philipp-baumann/spectro-platform-graphs).
