Link reproducibel example sript directly to file (blob)

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,5 +33,5 @@ knitr::opts_chunk$set(echo = TRUE)
 <a href="https://github.com/philipp-baumann/spectro-platform-graphs/blob/master/simplerspec-read-proc-tibble.png"><img src="https://github.com/philipp-baumann/spectro-platform-graphs/blob/master/simplerspec-read-proc-tibble.png" width="800"/></a>
 
 You can reproduce the above minimal example of the simplerspec processing workflow
-from the script [`10_read-process-spc.R`](https://github.com/philipp-baumann/spectro-platform-graphs) 
+from the script [`10_read-process-spc.R`](https://github.com/philipp-baumann/spectro-platform-graphs/blob/master/10_read-process-spc-examples.R) 
 and the data contained [in this repository](https://github.com/philipp-baumann/spectro-platform-graphs).
